:sparkles: Add auth and profiles
:art: Global code style
:white_check_mark: Add minimal tests

--- a/forum/templates/forum/post_form.html
+++ b/forum/templates/forum/post_form.html
@@ -1,4 +1,4 @@
-{% extends 'forum/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Forum{% endblock %}
 
@@ -6,10 +6,9 @@
 <li class="breadcrumb-item active">New post</li>
 {% endblock %}
 
-
 {% block content %}
 <form method="POST" class="col">{% csrf_token %}
 	{{ form.as_p }}
-	<button type="submit" class="btn btn-primary">Post</button>
+	<button type="submit" class="btn btn-primary">Apply</button>
 </form>
 {% endblock %}
