--- a/forum/templates/forum/post_list.html
+++ b/forum/templates/forum/post_list.html
@@ -1,36 +1,36 @@
-{% extends 'forum/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Forum{% endblock %}
 
 {% block content %}
-<ul class="post-list">
+<ul class="post-list p-0">
 {% for post in object_list %}
-	<li class="post">
-		<h5><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h5>
-		<span class="author">{{ post.author }}</span><span class="date">{{ post.created_date }}</span>
-	</li>
+    <li class="post d-block p-2 text-muted">
+        <h5><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h5>
+        <span class="author">{{ post.author }}</span><span class="date ms-2">{{ post.created_date }}</span>
+    </li>
 {% endfor %}
 </ul>
 
 <a class="btn btn-primary d-block" href="new">New post</a>
 
 <div class="container">
-	<ul class="pagination">
-		{% if page_obj.has_previous %}
-			{% if page_obj.previous_page_number != 1 %}
-				<li class="page-item"><a href="?page=1" class="page-link">&laquo; 1</a></li>
-			{% endif %}
-			<li class="page-item"><a href="?page={{ page_obj.previous_page_number }}" class="page-link">{{ page_obj.previous_page_number }}</a></li>
-		{% endif %}
+    <ul class="pagination justify-content-center mt-3">
+        {% if page_obj.has_previous %}
+            {% if page_obj.previous_page_number != 1 %}
+                <li class="page-item"><a href="?page=1" class="page-link">&laquo; 1</a></li>
+            {% endif %}
+            <li class="page-item"><a href="?page={{ page_obj.previous_page_number }}" class="page-link">{{ page_obj.previous_page_number }}</a></li>
+        {% endif %}
 
-		<li class="page-item active"><span class="page-link">{{ page_obj.number }}</span></li>
+        <li class="page-item active"><span class="page-link">{{ page_obj.number }}</span></li>
 
-		{% if page_obj.has_next %}
-			<li class="page-item"><a href="?page={{ page_obj.next_page_number }}" class="page-link">{{ page_obj.next_page_number }}</a></li>
-			{% if page_obj.next_page_number != page_obj.paginator.num_pages %}
-				<li class="page-item"><a href="?page={{ page_obj.paginator.num_pages  }}" class="page-link">{{ page_obj.paginator.num_pages  }} &raquo;</a></li>
-			{% endif %}
-		{% endif %}
-	</ul>
-	{% endblock %}
+        {% if page_obj.has_next %}
+            <li class="page-item"><a href="?page={{ page_obj.next_page_number }}" class="page-link">{{ page_obj.next_page_number }}</a></li>
+            {% if page_obj.next_page_number != page_obj.paginator.num_pages %}
+                <li class="page-item"><a href="?page={{ page_obj.paginator.num_pages  }}" class="page-link">{{ page_obj.paginator.num_pages  }} &raquo;</a></li>
+            {% endif %}
+        {% endif %}
+    </ul>
+    {% endblock %}
 </div>
