--- a/templates/base.html
+++ b/templates/base.html
@@ -18,12 +18,15 @@
 </head>
 <body>
     <div class="container">
-        <nav class="navbar navbar-expand navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-sm text-center navbar-dark bg-dark">
             <span class="navbar-brand">
                 <img src="{% static 'img/django.png' %}" alt="DJ" class="d-inline-block mw-100">
             </span>
-            <div class="container-fluid">
-                <ul class="navbar-nav mb-1">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse px-1" id="navbarContent">
+                <ul class="navbar-nav mb-1 me-auto">
                     <li class="nav-item">
                         <a href="{% url 'forum:post-list' %}" class="nav-link {% if '/profile/' not in request.path %}active{% endif %}">Home</a>
                     </li>
@@ -33,16 +36,20 @@
                         </li>
                     {% endif %}
                 </ul>
-                <span>
+                <ul class="navbar-nav mb-1 pe-2">
                     {% if request.user.is_authenticated %}
-                        <a href="{% url 'userprofile:detail' request.user.profile.id %}" class="nav-link d-inline mb-1 {% if '/profile/' in request.path %}text-white{% endif %}">Profile</a>
-                        <form class="nav-link d-inline mb-1" method="POST" action="{% url 'userprofile:logout' %}">{% csrf_token %}
-                            <a href="{% url 'userprofile:logout' %}" class="link_as_form">Logout</a>
-                        </form>
+                        <li class="nav-item">
+                            <a href="{% url 'userprofile:detail' request.user.profile.id %}" class="nav-link {% if '/profile/' in request.path %}active{% endif %}">Profile</a>
+                        </li>
+                        <li class="nav-item">
+                            <form method="POST" action="{% url 'userprofile:logout' %}">{% csrf_token %}
+                                <a href="{% url 'userprofile:logout' %}" class="nav-link link_as_form">Logout</a>
+                            </form>
+                        </li>
                     {% else %}
-                        <a href="{% url 'userprofile:login' %}?next={{ request.path }}" class="nav-link mb-1">Login</a>
+                        <a href="{% url 'userprofile:login' %}?next={{ request.path }}" class="nav-link">Login</a>
                     {% endif %}
-                </span>
+                </ul>
             </div>
         </nav>
 
@@ -59,5 +66,7 @@
             {% endblock %}
         </main>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
 </html>
